--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
       "title": "Login"
     },
 
-    "signup": {
+    "createAccount": {
       "title": "Sign up"
     },
 
@@ -22,8 +22,8 @@
       "title": "Referrals"
     },
 
-    "account": {
-      "title": "Account"
+    "profile": {
+      "title": "Profile"
     }
   }
 }
