Feat: Adds base plans screen (#22)
Feat: Adds initial home screen outside main navigator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,6 +64,10 @@
       "logout": "Log out"
     },
 
+    "plans": {
+      "title": "Select a plan"
+    },
+
     "validations": {
       "mixed": {
         "default": "** Default",
