--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -64,6 +64,10 @@
       "logout": "Cerrar sesión"
     },
 
+    "plans": {
+      "title": "Selecciona un plan"
+    },
+
     "validations": {
       "mixed": {
         "default": "** Por defecto",
