Feat: Adds plans initial steps (#23)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,9 @@
 {
   "translation": {
-    "common": {},
+    "common": {
+      "continue": "Continue",
+      "finish": "Finish"
+    },
 
     "login": {
       "title": "Log In",
