--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,9 @@
 {
   "translation": {
-    "common": {},
+    "common": {
+      "continue": "Continuar",
+      "finish": "Finalizar"
+    },
 
     "login": {
       "title": "Iniciar sesion",
