Feat: toast component (#25)
* wip: add toast component

* feat: added Toast hook and component

* fix: fixed PR comments

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,11 @@
   "translation": {
     "common": {
       "continue": "Continue",
-      "finish": "Finish"
+      "finish": "Finish",
+
+      "toast": {
+        "close": "Close notification"
+      }
     },
 
     "login": {
