--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,7 +2,11 @@
   "translation": {
     "common": {
       "continue": "Continuar",
-      "finish": "Finalizar"
+      "finish": "Finalizar",
+
+      "toast": {
+        "close": "Cerrar notificación"
+      }
     },
 
     "login": {
