Feat: Custom select (#27)
* Feat: Adds custom select to subscription screen

* Fix: test

* Fix: Texts

* Fix: test

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -109,6 +109,8 @@
           "title": "Depósito USDT",
           "description": "Elige una red para obtener la dirección de depósito:",
           "network": "Red",
+          "label": "Seleccionar una red",
+          "cta": "Seleccionar red",
           "walletId": "ID de Cartera",
           "copy-button": "Copiar ID de la cartera",
           "copy-info": "ID de Cartera copiada al portapapeles.",
