--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,6 +109,8 @@
           "title": "USDT Deposit",
           "description": "Choose a network to obtain the deposit address:",
           "network": "Network",
+          "label": "Choose a network",
+          "cta": "Choose network",
           "walletId": "Wallet ID",
           "copy-button": "Copy Wallet ID to the clipboard",
           "copy-info": "Wallet ID copied to the clipboard.",
