--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -15,6 +15,11 @@
 
       "textInput": {
         "toggleVisibility": "Cambiar visibilidad de la contraseña"
+      },
+
+      "phoneInput": {
+        "placeholder": "Introduce tu teléfono",
+        "invalid": "Número de teléfono no válido"
       }
     },
 
@@ -88,7 +93,25 @@
       "chooseLanguage": "Elige tu idioma",
       "changeLanguage": "Cambiar idioma",
 
-      "support": "Soporte",
+      "support": {
+        "title": "Soporte",
+        "description": "Si tienes alguna pregunta o algun problema puedes enviarnos tu numero de teléfono y te contactaremos en las siguientes 48 horas laborables.",
+
+        "contact": "Tambien puedes contactarnos por email si lo prefieres:",
+
+        "form": {
+          "phoneNumber": {
+            "label": "Numero de teléfono"
+          },
+          "message": {
+            "label": "Mensaje",
+            "placeholder": "Escribe tu mensaje"
+          },
+          "success": "Hemos recibido tu numero de teléfono, te contactaremos lo antes posible.",
+          "error": "Ha habido un error mientras se se enviaba el numero de teléfono:",
+          "submit": "Enviar al equipo de soporte"
+        }
+      },
 
       "logout": {
         "title": "Cerrar sesión",
