Feat: wallet screen (#47)
* feat: added wallet navigation

* feat: added wallet base screen

* feat: added connection for wallet screen

* feat: replaced hardcoded values for hook call

* fixed test

* fix PR comments

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,7 @@
       "continue": "Continue",
       "finish": "Finish",
       "goBack": "Go back",
+      "USDT": "${{value}} <small>USDT</small>",
 
       "toast": {
         "close": "Close notification"
@@ -73,7 +74,20 @@
     },
 
     "wallet": {
-      "title": "Wallet"
+      "title": "Wallet",
+      "total-balance": "Total balance",
+      "profits": "Profits",
+      "last24hours": "Last 24 hours",
+      "last7days": "Last 7 days",
+      "lastMonth": "Last month",
+
+      "deposit": {
+        "title": "Deposit"
+      },
+
+      "withdraw": {
+        "title": "Withdraw"
+      }
     },
 
     "referrals": {
