--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -108,7 +108,8 @@
         "withdrawWarning": "Si la cantidad de USDT a retirar es equivalente a 1 o mas BTC, necesitarás verificar tu identidad con tu documento nacional y una factura que muestre su residencia actual.",
         "success": "Revisaremos la cantidad de USDT que va a retirar y lo recibirá en el menor tiempo posible.",
         "error": "Ha habido un error mientras se enviava la solicitud de retirada:",
-        "cta": "Terminar retirada"
+        "cta": "Finalizar retiro",
+        "goToKYCForm": "Ir al formulario KYC"
       },
 
       "kyc": {
@@ -154,7 +155,7 @@
             "replace": "Reemplazar factura"
           },
 
-          "cta": "Finalizar confirmación de identidad"
+          "cta": "Finalizar retiro"
         },
 
         "documentPhoto": {
